# zen_ai

./: .cursorrules  .gitignore  CHANGELOG.md  DEPLOYMENT.md  GATHA_GUIDE.md  LICENSE  PROJECT_STATUS.md  QUICK_START.md  README.md  config.yml  config.yml.example  deploy-backend.sh  deploy_ec2.sh  env.example  pull-database.sh  pyproject.toml  requirements.txt  run_full_test.sh  start.sh  stop.sh
data/: test_inputs.jsonl  zenai.db  zenai.db.backup.20260116_011942
docs/: README.md  api-generate-endpoint.md  coding-guidelines_v0.1.md  core-identity_v0.1.md  deployment-guide.md  design-spec_v0.1.md  feedback-system.md  token-management_v0.1.md  user-guide_v0.1.md  version-management.md  设计规划_v0.1.md
reports/: batch_test_results.json  iteration.json
scripts/: load_env.sh  reset_system.sh  rotate_api_key.sh  validate_feedback_data.py
src/: __init__.py  admin.py  main.py
src/api/: app.py
src/config/: __init__.py  loader.py  models.py
src/core/: __init__.py  evolution.py  metrics.py  models.py  prompt.py  registry.py  state.py
src/ken_wang/: __init__.py  comment_handler.py  config.py  identity.py  moderator.py  question_generator.py  routes.py  sage.py
src/llm/: __init__.py  client.py  config.py  live_test.py
src/monitoring/: __init__.py  monitoring.py
src/orator/: __init__.py  orator.py
src/safety/: __init__.py  safety.py
src/scheduler/: __init__.py  scheduler.py
src/storage/: __init__.py  archive.py  database.py
src/trainer/: __init__.py  gatha_generator.py  trainer.py
src/utils/: __init__.py  cli.py  data_io.py  language_detector.py  reporting.py
tests/: batch_test.py  full_system_test.py  test_config_strict.py
